testdata/merge/valid/24_empty_string.reg
Windows Registry Editor Version 5.00

[HKEY_LOCAL_MACHINE\SOFTWARE\EmptyValues]
"EmptyString"=""
"NormalString"="NotEmpty"
"AnotherEmpty"=""
