testdata/merge/invalid/err_bad_line_continuation.reg
Windows Registry Editor Version 5.00

[HKEY_LOCAL_MACHINE\SOFTWARE\Test]
"BadContinuation"=hex:01,02,03\
04,05,06
